add many patients to one user
